# brazil-api

./: .env  .gitignore  Dockerfile  README.md  pyproject.toml
app/: main.py  update.py
app/archives/: regioes.json
app/interface/: response_interface.py
app/models/: city.py  country.py  database.py  estado.py  estados.py  municipio.py  municipios.py  pais.py  paises.py  regiao.py  regioes.py  region.py  response.py  state.py
app/repository/: city_repository.py  country_repository.py  estado_repository.py  municipio_repository.py  pais_repository.py  regiao_repository.py  region_repository.py  state_repository.py
app/routers/: base_router.py  city_router.py  country_router.py  estado_router.py  estados.py  municipio_router.py  municipios.py  pais_router.py  paises.py  regiao_router.py  regioes.py  region_router.py  state_router.py
app/service/: city_service.py  country_service.py  estado_service.py  municipio_service.py  pais_service.py  regiao_service.py  region_service.py  state_service.py
app/utils/: read_json.py
docs/: README-PT-BR.md
