[tool.poetry]
name = "dados-ibge-api"
version = "0.1.0"
description = "Projeto com dados da API pública do IBGE"
authors = ["alanmts-am <alanmts.am@gmail.com>"]
readme = "README.md"
packages = [{include = "dados_ibge_api"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
