[tool.poetry]
name = "brazil-api"
version = "1.0.0"
description = "Project with data from the IBGE public API"
authors = ["alanmts-am <alanmts.am@gmail.com>"]
readme = "README.md"
packages = [{include = "data_brazil_api"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
